After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707431 - Cannot @ref or @link C++ operator overloads
Cannot @ref or @link C++ operator overloads
Status: RESOLVED FIXED
Product: doxygen
Classification: Other
Component: documentation
1.8.4
Other Linux
: Normal normal
: ---
Assigned To: Dimitri van Heesch
Dimitri van Heesch
Depends on:
Blocks:
 
 
Reported: 2013-09-03 23:28 UTC by Tim
Modified: 2015-12-12 08:40 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tim 2013-09-03 23:28:02 UTC
See my post on stack overflow for all the details:

http://stackoverflow.com/questions/18479768/referencing-c-operator-overloads-with-doxygen
Comment 1 Dimitri van Heesch 2013-09-04 09:21:44 UTC
Confirmed. Should be fixed in the next GIT update.
Comment 2 Dimitri van Heesch 2013-12-24 18:59:33 UTC
This bug was previously marked ASSIGNED, which means it should be fixed in
doxygen version 1.8.6. Please verify if this is indeed the case. Reopen the
bug if you think it is not fixed and please include any additional information 
that you think can be relevant (preferrably in the form of a self-contained example).
Comment 3 Andrew 2015-12-12 01:37:18 UTC
Still doesn't work for templates. If in the original example on stack overflow  template<typename T> is placed before class Foo definition, the problem reoccurs. I tried @ref on regular member functions, they work fine but the overloaded operators do not. The same is valid for @link. Tested on doxygen versions 1.8.9.1 and 1.8.10.
Comment 4 Dimitri van Heesch 2015-12-12 08:40:37 UTC
I couldn't immediate reproduce this based on your description. Can you please file a new bug report and attach a self-contained example (source+config file in a tar or zip) that allows me to reproduce the problem?