DOC: Made Doxygen a bit happier

\copydoc referencing operator() etc. still does not work as of version
1.8.7 although a similar bug should be fixed in version 1.8.6 according
to https://bugzilla.gnome.org/show_bug.cgi?id=707431.

Also fixed a garbled initialisation order.

Signed-off-by: Jordi Paul <jordi.paul@math.tu-dortmund.de>